test/failing/dupextern.trunnel

extern struct x;
extern struct x;

